<resources>
    <string name="app_name">Submission4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Change Language Setting</string>

    <string name="menu_home">Home</string>
    <string name="movie">Movie</string>
    <string name="watchlist">Add To\nWatchlist</string>
    <string name="unWatchlist">Remove From\nWatchlist</string>
    <string name="tv_show">Tv Show</string>
    <string name="tvshow">TvShow</string>
    <string name="poster_movie">Poster Movie</string>
    <string name="your_watchlist">Your Watchlist</string>
    <string name="order_ticket_now">Order Ticket Now</string>
    <string name="movie_watchlist">Movie Watchlist</string>
    <string name="overview">Overview</string>
    <string name="release_date">Release Date</string>
    <string name="original_language">Original Language</string>
    <string name="your_favorite">Your Favorite</string>
    <string name="movie_favorite">Movie Favorite</string>
    <string name="your_favorite_tv_show">Your Favorite Tv Show</string>
    <string name="clear_all_movie">Clear All Favorite Movie</string>
    <string name="add_favorite">has added to your favorite list</string>
    <string name="add_watclist">has added to your watchlist</string>
    <string name="remove_favorite">has deleted from your favorite list</string>
    <string name="remove_watchlist">has deleted from your watchlist</string>
    <string name="favorite">Add To\nFavorite</string>
    <string name="unfavorite">Remove From\nfavorite</string>
    <string name="snackbar_delete">Are you sure want to delete this ?</string>
    <string name="undo">Undo</string>
    <string name="dialog_title">Delete all movie</string>
    <string name="dialog_message">Are you sure want to delete all movies in your favorite list ?</string>
    <string name="dialog_message_tv">Are you sure want to delete all tv shows in your favorite list ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="clear_all_movie_data">Clear all favorite movie…</string>
    <string name="movies">Movies</string>
    <string name="tv_show_favorite">Tv Show Favorite</string>
    <string name="delete_all_tv_show">Clear All Favorite Tv Shows</string>
    <string name="clear_all_tv_show">Clear All Favorite Tv Shows…</string>
    <string name="tv_show_watchlist">Tv Show Watchlist</string>
    <string name="coming_soon">This feature will be coming soon</string>
    <string name="dicoding_movie_catalog">Dicoding Movie Catalog</string>
    <string name="https_www_dicoding_com">https://www.dicoding.com</string>
</resources>
