<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
    </group>

    <item android:title="@string/movie">
        <menu>
            <item
                android:id="@+id/nav_movie"
                android:icon="@drawable/ic_movie_black_24dp"
                android:title="@string/movie" />
            <item
                android:id="@+id/nav_movie_favorite"
                android:icon="@drawable/ic_favorite"
                android:title="@string/movie_favorite" />
            <item
                android:id="@+id/nav_movie_watchlist"
                android:icon="@drawable/ic_bookmark_black_24dp"
                android:title="@string/movie_watchlist" />
        </menu>
    </item>

    <item android:title="@string/tv_show">
        <menu>
            <item
                android:id="@+id/nav_tvshow"
                android:icon="@drawable/ic_live_tv_black_24dp"
                android:title="@string/tv_show" />
            <item
                android:id="@+id/nav_tvshow_favorite"
                android:icon="@drawable/ic_favorite"
                android:title="@string/tv_show_favorite" />
            <item
                android:id="@+id/nav_tvshow_watchlist"
                android:icon="@drawable/ic_bookmark_black_24dp"
                android:title="@string/tv_show_watchlist" />
        </menu>
    </item>
</menu>
